# FlowMind

./: .gitignore  build-client.sh  pyproject.toml  requirements.txt
api/: start.py  start.sh
api/api/: main.py
