[project]
name = "flowmind-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[tool.pyright]
include = ["api", "scripts"]
ignore = ["src/oldstuff"]
reportMatchNotExhaustive = true
defineConstant = {}
stubPath = "api/stubs"

strict = ["**/*.py"]

pythonVersion = "3.12"
pythonPlatform = "Linux"
extraPaths = ["api", "scripts"]

[tool.ruff]
src = ["api", "scripts"]
# Exclude a variety of commonly ignored directories.
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*_pb2.py",
    "*_pb2_grpc.py",
    ".env",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# TODO: select all and switch to ingore, enable C901, "N"
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "T201",
    "TID251",
    "PERF",
    "I",
    "ASYNC",
    "COM",
    "RET",
    "W",
    "C90",
    "G",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# We have a 'core.workflowai' in local and 'flowmind' as a third party and this seems to confuse isort.
known-third-party = ["workflowai", "flowmind"]

[tool.ruff.lint.per-file-ignores]
# in bin we use rich.print
"scripts/*" = ["T201", "G004"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"openai.BaseModel".msg = "Import from pydantic instead"
